# acp-webui

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  admin.go  admin_test.go  agent.go  agent_test.go  auth.go  auth_test.go  build.rs  config.go  config_test.go  frontend_assets_disk.go  frontend_assets_embed.go  go.mod  main.go  mcp_display_image.go  mcp_display_image_test.go  models.go  scripts_test.go  server.go  server_test.go  storage.go  storage_test.go  transcription.go  transcription_test.go  util.go
doc/: 0001-product-design.md  2026-05-11-go-port-browser-qa.md  go-backend-migration-audit.md  mobile-remote-agent-controller-decisions.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
migrations/: 0001_initial.sql  0002_permission_requests.sql  0003_review_artifacts.sql  0004_tool_calls.sql  0005_session_continuity.sql  0006_session_agent_id.sql  0007_session_config_options.sql  0008_session_permission_mode.sql  0009_session_launch_profiles.sql  0010_session_turn_queue.sql  0011_message_content_blocks.sql  0012_prompt_templates.sql  0013_session_native_import.sql  0014_device_auth.sql  embed.go
scripts/: build-run-release.ps1  build-run-release.sh  check-public-source.ps1  deploy-linux.sh  deploy-nginx-basic-auth.sh  deploy-windows.ps1  restart-release-detached.ps1  restart-release-detached.sh  run-linux-dev.sh  run-tailscale-dev.ps1  run-tailscale.ps1  smoke-embedded-frontend.ps1
src/: acp.rs  auth.rs  config.rs  error.rs  main.rs  mcp_display_image.rs  models.rs  paths.rs  routes.rs  (+1 more)
(+451 files in other folders)
