[package]
name = "acp-webui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
embedded-frontend = ["dep:rust-embed"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = { version = "8.5", optional = true }
sqlx = { version = "0.8", features = ["chrono", "macros", "migrate", "runtime-tokio", "sqlite", "tls-rustls", "uuid"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.13"
tower = { version = "0.5", features = ["util"] }
